dando estilos y orden a componente jugadores

--- a/ruleta_frontend/src/components/Jugadores/JugadorItem.css
+++ b/ruleta_frontend/src/components/Jugadores/JugadorItem.css
@@ -1,4 +1,6 @@
-.jugador-card:hover {
-    border: 1px solid #b0b0b0;
+.jugador-row:hover {
+    font-weight:bold;
+  }
+  .jugador-row-delete:hover {
     cursor: pointer;
   }
