eestilizando boton formulario| comentando funcion actualizar para testear

--- a/ruleta_frontend/src/components/Jugadores/JugadorItem.css
+++ b/ruleta_frontend/src/components/Jugadores/JugadorItem.css
@@ -1,6 +1,9 @@
 .jugador-row:hover {
     font-weight:bold;
-  }
-  .jugador-row-delete:hover {
-    cursor: pointer;
-  }
+}
+.jugador-row-delete:hover {
+  cursor: pointer;
+}
+.form-boton{
+  margin-top: 12px;
+}
